# robotech

./: CMakeLists.txt  temp  test_marix  test_vector
LinearAlgebra/: LinearAlgebra.cpp  LinearAlgebra.h
include/DualNumber/: DualNumber.h
include/DualNumbers/: DualNumbers.h
include/LinearAlgebra/: LinearAlgebra.cpp  LinearAlgebra.h
include/Quaternion/: Quaternion.h  Quternion.h
include/Utils/: Consts.h
include/Vector/: Vector.h
test/: dual_nums_test.cpp  linear_algebra_test.cpp  quaternion_test.cpp  vector_test.cpp
